<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <ImageView
        android:id="@+id/image_view_add_external_media_camera"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:contentDescription="Device Camera"
        android:src="@drawable/baseline_camera_alt_24"/>
    <ImageView
        android:id="@+id/image_view_add_external_media_local_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:contentDescription="Local Image"
        android:visibility="gone"
        android:src="@drawable/baseline_image_24"/>
    <ImageView
        android:id="@+id/image_view_add_external_media_device_file"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:contentDescription="Device File"
        android:src="@drawable/baseline_folder_open_24"/>
</LinearLayout>