...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_add_detailed_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_add_detailed_transaction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
